--- a/turtlebot3/package.xml
+++ b/turtlebot3/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>turtlebot3</name>
+  <name>nucky</name>
   <version>2.1.2</version>
   <description>
-    ROS 2 packages for TurtleBot3
+    ROS 2 packages for Nucky
   </description>
   <maintainer email="willson@robotis.com">Will Son</maintainer>
   <license>Apache 2.0</license>
@@ -15,13 +15,13 @@
   <author email="jhshim@robotis.com">Ryan Shim</author>
   <author email="pyo@robotis.com">Pyo</author>
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <exec_depend>turtlebot3_bringup</exec_depend>
+  <exec_depend>nucky_bringup</exec_depend>
   <exec_depend>turtlebot3_cartographer</exec_depend>
-  <exec_depend>turtlebot3_description</exec_depend>
+  <exec_depend>nucky_description</exec_depend>
   <exec_depend>turtlebot3_example</exec_depend>
   <exec_depend>turtlebot3_navigation2</exec_depend>
-  <exec_depend>turtlebot3_node</exec_depend>
-  <exec_depend>turtlebot3_teleop</exec_depend>
+  <exec_depend>nucky_node</exec_depend>
+  <exec_depend>nucky_teleop</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
