--- a/nucky/package.xml
+++ b/nucky/package.xml
@@ -8,18 +8,18 @@
   </description>
   <maintainer email="willson@robotis.com">Will Son</maintainer>
   <license>Apache 2.0</license>
-  <url type="website">http://turtlebot3.robotis.com</url>
-  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
-  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
+  <url type="website">http://nucky.robotis.com</url>
+  <url type="repository">https://github.com/ROBOTIS-GIT/nucky</url>
+  <url type="bugtracker">https://github.com/ROBOTIS-GIT/nucky/issues</url>
   <author email="thlim@robotis.com">Darby Lim</author>
   <author email="jhshim@robotis.com">Ryan Shim</author>
   <author email="pyo@robotis.com">Pyo</author>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <exec_depend>nucky_bringup</exec_depend>
-  <exec_depend>turtlebot3_cartographer</exec_depend>
+  <exec_depend>nucky_cartographer</exec_depend>
   <exec_depend>nucky_description</exec_depend>
-  <exec_depend>turtlebot3_example</exec_depend>
-  <exec_depend>turtlebot3_navigation2</exec_depend>
+  <exec_depend>nucky_example</exec_depend>
+  <exec_depend>nucky_navigation2</exec_depend>
   <exec_depend>nucky_node</exec_depend>
   <exec_depend>nucky_teleop</exec_depend>
   <export>
