--- a/nucky_bringup/package.xml
+++ b/nucky_bringup/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>turtlebot3_bringup</name>
+  <name>nucky_bringup</name>
   <version>2.1.2</version>
   <description>
     ROS 2 launch scripts for starting the TurtleBot3
@@ -17,8 +17,8 @@
   <exec_depend>hls_lfcd_lds_driver</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
-  <exec_depend>turtlebot3_description</exec_depend>
-  <exec_depend>turtlebot3_node</exec_depend>
+  <exec_depend>nucky_description</exec_depend>
+  <exec_depend>nucky_node</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
